--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <ul>
+        <li><a href="recipes/butter_chicken.html">Butter Chicken</a></li>
+        <li><a href="recipes/peanut_chicken.html">One Tray Peanut Chicken</a></li>
+        <li><a href="recipes/salmon_bowl.html">Salmon Bowl</a></li>
+    </ul>
     
-</body>
+    </body>
 </html>
