--- a/recipes/butter_chicken.html
+++ b/recipes/butter_chicken.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Butter Chicken</h1>
 
-    <p><img src="../images/butter-chicken.jpg" height="250"></p>
+    <p><img src="../images/butter-chicken.jpg" alt="Glistening butter chicken" height="250"></p>
 
     <h2>Description</h2>
     
