--- a/recipes/salmon_bowl.html
+++ b/recipes/salmon_bowl.html
@@ -7,6 +7,47 @@
 </head>
 <body>
     <h1>Salmon Bowl</h1>
+
+    <p><img src="../images/salmon-bowl.png.avif" alt="Tasty Salmon Bowl" height="250"></p>
+
+    <h2>Description</h2>
+    
+    <p>This spicy salmon bowl has all of our favorite things, and is by far our favorite bowl to date!</p>
+    
+    <h2>Ingredients</h2>
+    <h3>For the Salmon</h3>
+    <ul>
+        <li>1/3 cup low-sodium soy sauce</li>
+        <li>1/3 cup extra-virgin olive oil</li>
+        <li>/4 cup chili garlic sauce</li>
+        <li>Juice of 1 lime</li>
+        <li>2 Tbsp honey</li>
+        <li>4 cloves garlic, minced</li>
+        <li>2 salmon fillets</li>
+    </ul>
+    <h3>For the Spicy Mayo</h3>
+    <ul>
+        <li>1/2 cup mayonnaise</li>
+        <li>2 Tbsp Sriracha</li>
+        <li>2 Tsp toasted sesame oil</li>
+    </ul>
+    <h3>For the Bowl</h3>
+    <ul>
+        <li>Cooked white rice</li>
+        <li>1 avocado, sliced</li>
+        <li>1 medium carrot, grated</li>
+        <li>1/2 red onion</li>
+    </ul>
+
+
+    <h2>Method</h2>
+
+    <ol>
+        <li>Make salmon: Preheat oven to 350° and line a large baking sheet with foil. In a medium bowl, whisk together soy sauce, olive oil, chili garlic sauce, lime juice, honey, and garlic. Add salmon and gently toss to combine. Place on prepared baking sheet and bake until salmon is fork-tender, 20 to 25 minutes.</li>
+        <li>Make spicy mayo: In a small bowl, combine mayonnaise, Sriracha, and sesame oil.</li>
+        <li>Assemble bowls: Divide rice among 4 bowls. Top with salmon, pickled cucumbers, avocado, carrot, red onion, coriander, and sesame seeds. Drizzle with spicy mayo.</li>
+    </ol>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
