--- a/recipes/peanut_chicken.html
+++ b/recipes/peanut_chicken.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peanut Chicken</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>One Tray Peanut Chicken</h1>
